--- a/assets/style.css
+++ b/assets/style.css
@@ -19,17 +19,26 @@ body {
     
   
   }
+  .dropdown-index{
+    color: white;
+    margin-top:0%;
+    margin-right:5%;
+  
+  }
+
+  h1{
+    font-size: 50px;
+  }
 .main{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
-
     text-align: center;
     margin-top: 25%;
 }
 .btn{
     color: white;
-    margin-top:20%;
-    margin-left:45%;
+    margin-top:10%;
+    margin-left:47%;
 }
 .dropdown-menu{
 
@@ -38,175 +47,21 @@ color:white;
 background-size:cover;
 color:white;
 }
-/*Portfolio*/
-/*#portfolio {
-    
-    width: 650px;
-    height: 875px;
-    margin-left: 30%;
-    margin-bottom: 10px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #dddddd;
-    float: left;
-   }
-    
-   h4 {
-     font-family: "Georgia", Times, "Times New Roman", serif;
-     font-size: 20px;
-     text-decoration-color: white;
-     padding-top: 18px;
-     text-align: center;
-   
-   }
-   article {
-    background-color: #4aaaa5;
-     width: 264px;
-     height: 60px;
-     margin-top: 126px;
-     color: white;
-   }
-   .dbg {
-    background-image: url("../images/1\ star\ .jpg");
-    background-repeat: no-repeat;
-    background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-left: 30px;
-    float: left;
-    color: white;
-    
-   }
-   .giphy-api {
-    background-image: url("../images/giphy.gif");
-    background-repeat: no-repeat;
-    background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-right: 34px;
-    float: right;
-   }
-   .trivia {
-    background-image: url("../images/611002.jpg");
-    background-repeat: no-repeat;
-    background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-top: 54px;
-    margin-left: 30px;
-    float: left;
-    color:white;
-   }
-   .hayai-japan-trains {
-    background-image: url("../images/eMKbZVy.jpg");
-    background-repeat: no-repeat;
-    background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-top: 54px;
-    margin-right: 34px;
-    float: right;
-   }
-   .rock {
-    background-image: url("../images/port_4.jpeg.jpg");
-    background-repeat: no-repeat;
-    background-size: 264px 196px;
-    width: 264px;
-    height: 196px;
-    margin-top: 54px;
-    margin-left: 30px;
-    float: left;
-   }/*
-
-   /*contact */
-   /* 4.0 Contact */
-#contact {
-
-    width: 650px;
-    height: 615px;
-    margin-left: 30%;
-    margin-bottom: 5px;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #dddddd;
-    float: left;
-    line-height: 14px;
-   }
-   .label {
-    color: #777777;
-      font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 300px;
-    margin-left: 50px;	
-   }
-   .heavy {
-     border-top: 3px solid white;
-     width: 600px;
-     margin-top: 3px;
-     margin-left: 12px;
-     margin-bottom: 30px;
-    }
-   input[type=text], select {
-    width: 572px;
-    height: 36px;
-    padding-left: 12px;
-    border: 1px solid #dddddd;
-    margin-top: 10px;
-    margin-left: 28px;
-    margin-bottom: 20px;
-    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 14px;
-    color: #777777;
-   }
-   input[type=email], select {
-    width: 572px;
-    height: 36px;
-    padding-left: 12px;
-    border: 1px solid #dddddd;
-    margin-top: 10px;
-    margin-left: 28px;
-    margin-bottom: 20px;
-    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 14px;
-    color: #777777;
-   }
-   input[type=textarea], select {
-    width: 572px;
-    height: 200px;
-    padding-left: 12px;
-    border: 1px solid #dddddd;
-    margin-top: 10px;
-    margin-left: 28px;
-    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 14px;
-    color: #777777;
-   }
-   input[type=submit] {
-    width: 116px;
-    height: 40px;
-    margin-top: 20px;
-    margin-left: 28px;
-   background-color:purpl;
-    border: none;
-    color: #ffffff;
-    text-decoration: none;
-   cursor: pointer;
-   font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 14px;
-   }
-   .top{
-     color:white;
-     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-     text-align: center;
-   }
 
 
+
+/* portfolio */
    .carousel-inner{
      margin-top: 10%;
      width: 50%;
      height: 50%;
      
      }
- 
+     .dropdown-portfolio{
+      color: white;
+     margin-right: 2%;
+       
+     }
  
 img.switch-image{
  display: block;
@@ -220,4 +75,343 @@ h4 {
   text-align: center; 
   color:white
 
+}
+/* contact */
+/*//////////////////////////////////////////////////////////////////
+[ FONT ]*/
+
+@font-face {
+  font-family: Ubuntu-Bold;
+  src: url('../fonts/ubuntu/Ubuntu-Bold.ttf'); 
+}
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ RESTYLE TAG ]*/
+
+* {
+	margin: 0px; 
+	padding: 0px; 
+	box-sizing: border-box;
+}
+
+body, html {
+	height: 100%;
+	font-family: Ubuntu-Bold, sans-serif;
+}
+
+/*---------------------------------------------*/
+a {
+	font-family: Ubuntu-Bold;
+	font-size: 14px;
+	line-height: 1.7;
+	color: #666666;
+	margin: 0px;
+	transition: all 0.4s;
+	-webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+}
+
+a:focus {
+	outline: none !important;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+/*---------------------------------------------*/
+h1,h2,h3,h4,h5,h6 {
+	margin: 0px;
+}
+
+p {
+	font-family: Ubuntu-Bold;
+	font-size: 14px;
+	line-height: 1.7;
+	color: #666666;
+	margin: 0px;
+}
+
+ul, li {
+	margin: 0px;
+	list-style-type: none;
+}
+
+
+/*---------------------------------------------*/
+input {
+	outline: none;
+	border: none;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+    appearance: none;
+    -webkit-appearance: none;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+textarea {
+  outline: none;
+  border: none;
+}
+
+textarea:focus, input:focus {
+  border-color: transparent !important;
+}
+
+input::-webkit-input-placeholder { color: #bdbdd3;}
+input:-moz-placeholder { color: #bdbdd3;}
+input::-moz-placeholder { color: #bdbdd3;}
+input:-ms-input-placeholder { color: #bdbdd3;}
+
+textarea::-webkit-input-placeholder { color: #bdbdd3;}
+textarea:-moz-placeholder { color: #bdbdd3;}
+textarea::-moz-placeholder { color: #bdbdd3;}
+textarea:-ms-input-placeholder { color: #bdbdd3;}
+
+/*---------------------------------------------*/
+button {
+	outline: none !important;
+	border: none;
+	background: transparent;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+iframe {
+	border: none !important;
+}
+
+
+/*---------------------------------------------*/
+.container {
+	max-width: 1200px;
+}
+
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ Contact ]*/
+
+.container-contact100 {
+  width: 100%;  
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  position: relative;
+  
+}
+
+.wrap-contact100 {
+  width: 550px;
+  background: transparent;
+  padding: 50px 0px 160px 0px;
+}
+
+
+/*==================================================================
+[ Form ]*/
+
+.contact100-form {
+  width: 100%;
+}
+
+.contact100-form-title {
+  display: block;
+  font-family: Ubuntu-Bold;
+  font-size: 30px;
+  color:white;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 49px;
+}
+
+/*------------------------------------------------------------------
+[ Input ]*/
+
+.wrap-input100 {
+  width: 100%;
+  background-color: #fff;
+  border-radius: 31px;
+  margin-bottom: 16px;
+  position: relative;
+  z-index: 1;
+}
+
+.input100 {
+  position: relative;
+  display: block;
+  width: 100%;
+  background: #fff;
+  border-radius: 31px;
+  font-family: Ubuntu-Bold;
+  font-size: 18px;
+  color: #8f8fa1;
+  line-height: 1.2;
+}
+
+
+/*---------------------------------------------*/
+input.input100 {
+  height: 62px;
+  padding: 0 35px 0 35px;
+}
+
+
+textarea.input100 {
+  min-height: 169px;
+  padding: 19px 35px 0 35px;
+}
+
+/*------------------------------------------------------------------
+[ Focus Input ]*/
+
+.focus-input100 {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  border-radius: 31px;
+  background-color: #fff;
+  pointer-events: none;
+  
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.input100:focus + .focus-input100 {
+  width: calc(100% + 20px);
+}
+
+/*------------------------------------------------------------------
+[ Button ]*/
+.container-contact100-form-btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 10px;
+}
+
+.contact100-form-btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  min-width: 150px;
+  height: 62px;
+  background-color: transparent;
+  border-radius: 31px;
+
+  font-family: Ubuntu-Bold;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  position: relative;
+  z-index: 1;
+}
+
+.contact100-form-btn::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  border-radius: 31px;
+  background-color: #827ffe;
+  pointer-events: none;
+  
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.contact100-form-btn:hover:before {
+  background-color: #403866;
+  width: calc(100% + 20px);
+}
+
+
+
+
+/*------------------------------------------------------------------
+[ Alert validate ]*/
+
+.validate-input {
+  position: relative;
+}
+
+
+
+
+
+.alert-validate:hover:before {
+  visibility: visible;
+  opacity: 1;
+}
+
+@media (max-width: 992px) {
+  .alert-validate::before {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.dropdown-contact{
+    color: white;
+    margin-top:10%;
+    margin-right:10%;
+    padding-top: 0px;
+    
 }
