--- a/assets/style.css
+++ b/assets/style.css
@@ -40,13 +40,6 @@ body {
     margin-top:10%;
     margin-left:47%;
 }
-.dropdown-menu{
-
-text-align: center;
-color:white;
-background-size:cover;
-color:white;
-}
 
 
 
@@ -413,9 +406,80 @@ textarea.input100 {
     margin-top:10%;
     margin-right:10%;
     padding-top: 0px;
+    font-size: 35px;
+    
     
 }
 p{
   color: white;
   font-size: 15px;
+}
+
+
+
+
+
+
+/* ABOUT ME */
+
+.about-image{
+  border-radius: 50%;
+  margin-left: 20%;
+  margin-top:0%;
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 200px;
+  
+}
+
+.about-paragraph{
+  font-size: 20px;
+  
+}
+
+.about-h2{
+  color:white;
+  font-size: 50px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+}
+.about-h2-1{
+  color:white;
+  font-size: 50px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin-left: 50px;
+
+}
+.my-4{
+  color: white;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.dropdown-about{
+  color: white;
+  margin-right: 10%;
+  
+ 
+
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
 }
