--- a/assets/style.css
+++ b/assets/style.css
@@ -69,6 +69,8 @@ h4 {
   color:white
 
 }
+
+
 /* contact */
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
@@ -77,7 +79,12 @@ h4 {
   font-family: Ubuntu-Bold;
   src: url('../fonts/ubuntu/Ubuntu-Bold.ttf'); 
 }
-
+#craving-p{
+  background-color:#6969698e;
+  color:white;
+  width:600px;
+  margin-left:84px;
+}
 
 
 /*//////////////////////////////////////////////////////////////////
@@ -484,3 +491,6 @@ p{
   }
 }
 
+#craving-p{
+  margin-right:40%;
+}
